# build-mcp

./: pyproject.toml
agents/: agentframework.py
components/: card.py
servers/: DesktopMCP.py  store_server.py
